fixed front end layout on safari

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -19,7 +19,7 @@ body, html {
   display: inline-block; }
 
 #area {
-  position: relative;
+  position: absolute;
   left: 25%;
   width: 71%;
   display: inline-block;
@@ -37,7 +37,7 @@ form.form {
   padding: 5%; }
 
 thead {
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
   margin-left: -2%;
